--- a/css/slides.css
+++ b/css/slides.css
@@ -12,7 +12,7 @@ html,body{
 body{
 
 	margin:0;
-	overflow: hidden;
+
 
 	background: #fff;
 
@@ -37,7 +37,7 @@ body{
 	width: 100%;
 	height:100%;
 	position: relative;
-	overflow: hidden;
+
 }
 
 
@@ -45,20 +45,6 @@ s{
 	text-decoration: line-through;
 }
 
-#translations{
-	margin: 10px auto;
-    font-size: 12px;
-    line-height: 21px;
-    color: #fff;
-    text-align: center;
-    width: 900px;
-}
-#translations a{
-	color:#dd4040;
-}
-#translations a:hover{
-	color:#ee5151;
-}
 
 
 
@@ -72,13 +58,13 @@ s{
 #slideshow{
 
 	/*border: 1px solid rgba(0,0,0,0.2);*/
-	width:960px;
-	height:540px;
+	width:100%;
+	height:100%;
 
 	/* Center this thing */
 	position: absolute;
-	left:-480px;
-	top:-270px;
+	left: -1000%;
+	top: -50%;
 
 }
 .object{
